# ChangeLog for dev-scheme/scm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-scheme/scm/ChangeLog,v 1.9 2009/02/03 16:34:28 hkbst Exp $

*scm-5.5.5-r1 (03 Feb 2009)

  03 Feb 2009; Marijn Schouten <hkBst@gentoo.org> +scm-5.5.5-r1.ebuild:
  fix bug 247182 (again)

*scm-5.5.5 (02 Feb 2009)

  02 Feb 2009; Marijn Schouten <hkBst@gentoo.org> +scm-5.5.5.ebuild:
  bump

  17 Nov 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
  scm-5.5.4.ebuild:
  fix wrong installation of man files, bug 247182, reported by flameeyes

  18 Jan 2008; Christian Faulhammer <opfer@gentoo.org> scm-5.5.4.ebuild:
  keyworded ~x86, bug 206527

*scm-5.5.4 (18 Jan 2008)

  18 Jan 2008; Marijn Schouten <hkBst@gentoo.org> +scm-5.5.4.ebuild:
  bump, fixes bug 191829 and bug 188335

  25 Jun 2007; Marijn Schouten <hkBst@gentoo.org> scm-5.5.3.ebuild:
  check for ROOT in pkg_postinst, thanks to peper

  25 Jun 2007; Marijn Schouten <hkBst@gentoo.org> scm-5.5.3.ebuild:
  remove ROOT abuse, bug 167271

  28 May 2007; Marijn Schouten <hkBst@gentoo.org> scm-5.5.3.ebuild:
  fix new-catalog creation

*scm-5.5.3 (24 Jan 2007)

  24 Jan 2007; Marijn Schouten <hkBst@gentoo.org> +metadata.xml,
  +scm-5.5.3.ebuild:
  Initial ebuild
