@@ -1,9 +1,4 @@
-DIST scm-5e5.zip 910806 RMD160 2ef8ff29f0aa4fe0afb5a086137a088be765ffb4 SHA1 3b17b3ed38bc5d9e3d8a3747a5e8018ecf67163f SHA256 9df62d4495184d9241f316c60e15481e890cd50932d43c2747afcf557db0f537
-DIST scm5e3.zip 901866 RMD160 91f97bf4efd6bf734fe3e789762a90f20ad7b9b2 SHA1 3d7a0160357840c6a96ef9ded6fb31d92507561d SHA256 65fe69d6f3ccc2adeb4f73fed4a73c700789a2e8b7c7937f5bb9b4f851e3db7d
-DIST scm5e4.zip 910672 RMD160 1e33f9fa55ec7ffc9e178b66ea74fb8e11846178 SHA1 9c2f5b9619d828276fad21b0a33fd2dfebc62c26 SHA256 cf49da2027192b31a9dbb4572ba32449c10baa0777c37baac14191bed34422e8
-EBUILD scm-5.5.3.ebuild 1361 RMD160 c34a01f3eeb20634343fb7e673d10ba39fb942db SHA1 8d7f9edfa63d6e5427b47bb5720a0d0588cbbffd SHA256 95b46b28606d0aeade61c3096b93633e95c6abf4022fc994ee20d66f13fc260e
-EBUILD scm-5.5.4.ebuild 1676 RMD160 9623191d8ab22668b2e275fb85f08ce85ba78692 SHA1 a652338bf0599a6398b863df1dafaff2e483a90e SHA256 55bb8d94abbef76578686690c5ea80292a42e5ee9e938ba52bacc32557cd3bb3
-EBUILD scm-5.5.5-r1.ebuild 1588 RMD160 8e452c8dc9d62d1907bc8e54ca72f1b00d371c5d SHA1 0d42067a704ff0474aae3dc27c71cf997f80b33e SHA256 1e44fc7b35b3dd8c6dd37c0c81aece70620cb4810948a6ad8ff2fd4195b091f8
-EBUILD scm-5.5.5.ebuild 1488 RMD160 1a7d301ec4f94ee3226c48993ac174dfda7adba9 SHA1 eb29add27c9927b701f90f1f2c9be1d0479c53fd SHA256 9402906f908bf901cb265181fb96f552aa9ba735bf5a68075b5f41318dc4d45c
-MISC ChangeLog 1270 RMD160 11762072ec4487b56e6e0b0764b89823cfbda606 SHA1 786132f4f810b2785bad8b1a43bd03eab483ee6f SHA256 a073dfce7bdf74c48a6c967c31d56d531afb2dd13a368f53cdef9534376da7fd
-MISC metadata.xml 434 RMD160 951fec63f3325b7f92693c88948382715576d8c9 SHA1 cf322011d73ec3e648fe45f7bf357c39eaa29d52 SHA256 b810a305f07a75ef4299bde4aa2bd136e98bcad906b4000d46235a127dbf7844
+DIST scm-5e6.zip 912968 RMD160 9b16f44b0da6dcc0691cbaaa790159893df70007 SHA1 3b54132725e93a34bcda04ea8493d125a084fd8d SHA256 97f1b284aacfca01ae44e936dd8468c1d68b0b323776ab5da1d6ec7cb737c1df
+EBUILD scm-5.5.6.ebuild 3705 RMD160 581602f12e97bdb083eccc1b8bcbff89e8c21cc0 SHA1 ba0e8ac6a9ea4802661a85e7000c0ea89176bfd8 SHA256 c4b8d6ebf46778137056247c5a293c46c2adb3c4894d0f132c7a32ec7770f7cf
+MISC ChangeLog 1585 RMD160 595613b9d6241e89c6784a33d59eb01d7198dd7b SHA1 26438301ff7bad0571ee8b4f8b4ed7177b660357 SHA256 29149f27012a8ce627772e1264921b58a7b1323870a3b1a20eb8fe4312e8cfe0
+MISC metadata.xml 1559 RMD160 7d7422dc0aa6ec412db80a34aefa493a08ac9add SHA1 ae66c44e6e8b81ec52972942c7513ce5716414e3 SHA256 8fc828792bf15bca2417454d3845afbbc7263421dbe2458b0f6a36d4dae13495
