@@ -9,4 +9,26 @@
 	<longdescription lang="en">
 SCM is a  Scheme implementation conforming to  Revised5 Report on the Algorithmic Language Scheme and the IEEE P1178 specification.
 	</longdescription>
+	<use>
+		<flag name='arrays'>Support for  arrays, uniform-arrays and
+			uniform-vectors.</flag>
+		<flag name='bignums'>Support for large precision integers.</flag>
+		<flag name='cautious'>SCM will always check the number of arguments to
+			interpreted closures.</flag>
+		<flag name='dynamic-linking'>Be able to load compiled files while
+			running.</flag>
+		<flag name='engineering-notation'>Floats to display in engineering
+			notation (exponents always multiples of 3) instead of scientific
+			notation.</flag>
+		<flag name='gsubr'>generalized c arguments: for arbitrary 
+			(more then 11) arguments to C functions.</flag>
+		<flag name='inexact'>Support for floating point numbers.</flag>
+		<flag name='ioext'>Commonly available I/O extensions: line I/O, file
+			positioning, file delete and rename, and directory functions.</flag>
+		<flag name='macro'>C level support for hygienic and referentially 
+			transparent macros (syntax-rules macros).</flag>
+		<flag name='regex'>String regular expression matching.</flag>
+		<flag name='unix'>Support for: nice, acct, lstat, readlink, symlink,
+			mknod and sync.</flag>
+	</use>
 </pkgmetadata>
