@@ -1,6 +1,14 @@
 # ChangeLog for dev-scheme/scm
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-scheme/scm/ChangeLog,v 1.9 2009/02/03 16:34:28 hkbst Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-scheme/scm/ChangeLog,v 1.10 2010/04/16 19:17:20 chiiph Exp $
+
+*scm-5.5.6 (16 Apr 2010)
+
+  16 Apr 2010; Tomas Touceda <chiiph@gentoo.org> -scm-5.5.3.ebuild,
+  -scm-5.5.4.ebuild, -scm-5.5.5.ebuild, -scm-5.5.5-r1.ebuild,
+  +scm-5.5.6.ebuild, +files/scm-5.5.6-multiplefixes.patch, metadata.xml:
+  Version bump, added features for building wrt bug 259922. Clean up old
+  ebuilds
 
 *scm-5.5.5-r1 (03 Feb 2009)
 
